fix z-index on hovertext so it renders above the clock hands

--- a/styles/easy-timekeeping.css
+++ b/styles/easy-timekeeping.css
@@ -241,7 +241,7 @@
   transition: opacity 1s ease-in-out;
 
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   left: 0;
   bottom: 1.2em;
 }
